--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,4 @@
-pipline {
+pipeline {
     agent any
     stages{
         stage('build'){
@@ -11,7 +11,7 @@ pipline {
             steps{
                 echo "Pushing Image"
                 withCredentials([usernamePassword(credentialsId: 'Docker-cred', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]){
-                    sh "docker login -u USERNAME -p PASSWORD"
+                    sh "docker login -u $USERNAME -p $PASSWORD"
                     sh "docker push mostafastudies/pipline:${env.BUILD_NUMBER}"
                 }
             }
