--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
             steps{
                 echo "Pushing Image"
                 withCredentials([usernamePassword(credentialsId: 'Docker-cred', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]){
-                    sh 'echo $PASSWORD | docker login -u $USERNAME --password-stdin'
+                    sh 'bash "echo $PASSWORD | docker login -u $USERNAME --password-stdin"'
                     sh 'docker push mostafastudies/pipline:${env.BUILD_NUMBER}'
                 }
             }
